force-app/main/default/objects/leaseworks__Delinquency_Staging__c/leaseworks__Delinquency_Staging__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_OP Delinquency Staging</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_OP Delinquency Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>