force-app/main/default/objects/leaseworks__Delinquency_Staging__c/fields/leaseworks__CompanyName__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CompanyName__c</fullName>
    <label>Z_Unused_OP CompanyName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>