force-app/main/default/objects/leaseworks__Delinquency_Staging__c/fields/leaseworks__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Date__c</fullName>
    <label>Z_Unused_OP Invoice Date</label>
    <type>Date</type>
</CustomField>