force-app/main/default/objects/leaseworks__Delinquency_Staging__c/fields/leaseworks__Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type__c</fullName>
    <label>Z_Unused_OP Invoice Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>