force-app/main/default/objects/leaseworks__Delinquency_Staging__c/fields/leaseworks__MaintBal2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MaintBal2__c</fullName>
    <label>Z_Unused_OP MaintBal2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>