force-app/main/default/objects/leaseworks__Delinquency_Staging__c/fields/leaseworks__MSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN__c</fullName>
    <label>Z_Unused_OP MSN</label>
    <length>32</length>
    <type>Text</type>
</CustomField>