force-app/main/default/objects/leaseworks__Delinquency_Staging__c/fields/leaseworks__Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Outstanding_Amount__c</fullName>
    <label>Z_Unused_OP Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>